# keepkey-vault-v6

./: .gitignore  CLAUDE.md  GetFeatures  Makefile  build.ps1  test-get-features.js  test-queue-performance.html
.github/workflows/: README.md  SIGNING_SETUP.md  build.yml  release.yml
docs/: queue-system-audit.md
docs/old/architecture/: cleanup-summary.md  cleanup-verification.md
docs/old/keepkey/: transport_magic.md
docs/old/usb/: oob_mode_detection.md
projects/keepkey-db/: Cargo.toml
projects/keepkey-db/src/: assets.rs  cache.rs  database.rs  device_registry.rs  errors.rs  lib.rs  migrations.rs  portfolio.rs  types.rs
projects/keepkey-db/tests/: bootloader_tests.rs
projects/keepkey-usb/: Cargo.toml  build.rs  commands.rs  core_lib.rs  device_queue.rs  device_update.rs  lib.rs
projects/keepkey-usb/chains/: mod.rs
projects/keepkey-usb/chains/binance/: mod.rs
projects/keepkey-usb/chains/bitcoin/: address.rs  message.rs  mod.rs  transaction.rs
projects/keepkey-usb/chains/cosmos/: address.rs  amino.rs  mod.rs  transaction.rs
projects/keepkey-usb/chains/eos/: mod.rs
projects/keepkey-usb/chains/ethereum/: address.rs  message.rs  mod.rs  transaction.rs
projects/keepkey-usb/chains/nano/: mod.rs
projects/keepkey-usb/chains/osmosis/: mod.rs
projects/keepkey-usb/chains/ripple/: mod.rs
projects/keepkey-usb/chains/thorchain/: mod.rs
projects/keepkey-usb/features/: mod.rs
projects/keepkey-usb/messages/: mod.rs
projects/keepkey-usb/transport/: hid.rs  webusb.rs
projects/keepkey-vault/: BACKEND_REFACTOR_PLAN.md  CLAUDE.md  CODEBASE_ANALYSIS_REPORT.md  package.json
projects/keepkey-vault/docs/: README.md
projects/keepkey-vault/docs/architecture/: current-dialog-system.md  dialog-system-spec.md
projects/keepkey-vault/docs/cleanup/: dialog-cleanup-checklist.md
projects/keepkey-vault/docs/planning/: dialog-system-reorganization.md
projects/keepkey-vault/src/: App.tsx  main.tsx
projects/keepkey-vault/src-tauri/: Cargo.toml  tauri.conf.json
projects/keepkey-vault/src-tauri/firmware/: releases.json
projects/keepkey-vault/src-tauri/src/: commands.rs  lib.rs
projects/keepkey-vault/src-tauri/src/commands/: api.rs  cache.rs  config.rs  events.rs  logging.rs  mod.rs  pin.rs  recovery.rs  test.rs  verification.rs
projects/keepkey-vault/src-tauri/src/commands/device/: check_device_bootloader.rs  get_blocking_actions.rs  get_connected_devices.rs  get_device_info_by_id.rs  get_device_status.rs  get_devices_needing_setup.rs  get_features.rs  get_queue_status.rs  mod.rs  register_device.rs  set_device_label.rs  wipe_device.rs
projects/keepkey-vault/src-tauri/src/data/: paths.json  summary.json
projects/keepkey-vault/src-tauri/src/device/: mod.rs  transaction_operations.rs  updates.rs
projects/keepkey-vault/src/components/: BackendMessageFeed.tsx  DeviceInvalidStateDialog.tsx  DeviceSetupManager.tsx  DeviceUpdateManager.tsx  EnterBootloaderModeDialog.tsx  KeepKeyDeviceList.tsx  SettingsDialog.tsx  VaultInterface.tsx
projects/keepkey-vault/src/components/BootloaderUpdateWizard/: BootloaderUpdateWizard.tsx
projects/keepkey-vault/src/components/FirmwareUpdateWizard/: FirmwareUpdateWizard.tsx
projects/keepkey-vault/src/components/OnboardingWizard/: OnboardingWizard.tsx
projects/keepkey-vault/src/components/SeedVerificationWizard/: SeedVerificationWizard.tsx
projects/keepkey-vault/src/components/SetupWizard/: SetupWizard.tsx
projects/keepkey-vault/src/components/SetupWizard/steps/: Step1ConnectDevice.tsx  Step2VerifyBootloader.tsx  Step3VerifyFirmware.tsx  Step4SetupWallet.tsx
projects/keepkey-vault/src/components/TroubleshootingWizard/: TroubleshootingWizard.tsx
projects/keepkey-vault/src/components/WalletCreationWizard/: DevicePin.tsx  FactoryState.tsx  RecoveryFlow.tsx  RecoveryPin.tsx  RecoverySettings.tsx  WalletCreationWizard.tsx
projects/keepkey-vault/src/components/logo/: keepkey-ui-glyph.tsx
projects/keepkey-vault/src/components/ui/: modal.tsx
projects/keepkey-vault/src/constants/: WalletFlowRoutes.ts
projects/keepkey-vault/src/contexts/: DialogContext.tsx
projects/keepkey-vault/src/hooks/: useCommonDialogs.tsx  useOnboardingState.ts
projects/keepkey-vault/src/services/: pinService.ts
projects/keepkey-vault/src/utils/: testGetFeatures.ts
