[package]
name = "keepkey-db"
version = "0.1.0"
edition = "2021"
description = "Database layer for KeepKey applications"
authors = ["KeepKey Team"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync", "macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
env_logger = "0.10" 