[package]
name = "keepkey_rust"

[lib]
name = "keepkey_rust"
path = "core_lib.rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Headless multi-device queue and transport layer for KeepKey hardware wallets."


[[bin]]
name = "kkq"
path = "main.rs"

[[bin]]
name = "kkcli-v2"
path = "src/bin/kkcli_v2.rs"
edition = "2021"

[[bin]]
name = "test_devices"
path = "test_devices.rs"
edition = "2021"

[build-dependencies]
prost-build = "0.11"
protoc-bin-vendored = "3.0"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "1.13", features = ["hex"] }

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "1.13", features = ["hex"] }
futures = "0.3"
hidapi = { version = "2.6", features = ["linux-static-hidraw"] }
hex = "0.4"
log = "0.4"
once_cell = "1"
prost = "0.11"
prost-types = "0.11"
rand = "0.8"
rusb = { version = "0.9.3", features = ["vendored"] }
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
comfy-table = "7"
clap = { version = "4", features = ["derive"] }
base64 = "0.21"

# Multi-chain support dependencies
bitcoin = { version = "0.30", features = ["serde", "std"] }
ethereum-types = "0.14"
ethers-core = { version = "2.0", default-features = false }
primitive-types = "0.11.1"

# Cosmos ecosystem dependencies
cosmrs = { version = "0.17", default-features = false, features = ["grpc"] }
cosmos-sdk-proto = { version = "0.20", default-features = false }
tendermint = { version = "0.36", default-features = false }
tendermint-proto = { version = "0.36", default-features = false }

# Additional chain dependencies
eosio = "0.3.1"
chrono = { version = "0.4.23", default-features = false, features = ["serde", "clock"] }
semver = "1.0"
regex = "1.5.6"
humantime = "2.1.0"
lazy_static = "1.4.0"

# REST API dependencies for future server implementation
axum = { version = "0.7", features = ["ws"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"], optional = true }
utoipa = { version = "4", features = ["axum_extras"], optional = true }
utoipa-axum = { version = "0.2.0", optional = true }
utoipa-swagger-ui = { version = "5", features = ["axum", "debug-embed"], optional = true }
futures-util = "0.3"

# Database dependencies for persistence
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
rusqlite_migration = { version = "1.2", optional = true }
dirs = "5.0"

[features]
default = []
server = ["axum", "tower", "tower-http", "utoipa", "utoipa-axum", "utoipa-swagger-ui"]
database = ["rusqlite", "rusqlite_migration"]
full = ["server", "database"]
