[package]
name = "keepkey-vault"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "keepkey-vault"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "keepkey_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = ["devtools"] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }
tauri-plugin-process = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keepkey_rust = { path = "../../keepkey-usb" }
keepkey-db = { path = "../../keepkey-db" }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
hex = "0.4.3"
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }

